# ros2_lab3

./: README.md
ex01/py_pubsub/: package.xml  setup.py
ex01/py_pubsub/py_pubsub/: client_member_function.py  service_member_function.py
ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml
ex03/: doctor.txt
ex04/move_to_goal/: CMakeLists.txt  package.xml
ex04/move_to_goal/src/: move_to_goal.cpp
ex05/: CMakeLists.txt  client.py  package.xml  server.py
ex05/action/: CleaningTask.action
